--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@astrojs/prism": "^3.2.0",
 		"@astrojs/rss": "4.0.1",
 		"astro": "4.0.8",
-		"astro-font": "^0.0.72"
+		"astro-font": "^0.0.72",
+		"headjs": "^1.0.3"
 	},
 	"devDependencies": {
 		"@astrojs/mdx": "2.0.3",
