--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@astrojs/rss": "4.0.1",
 		"astro": "4.2.2",
 		"astro-analytics": "^2.7.0",
+		"astro-capo": "^0.0.1",
 		"astro-font": "^0.0.72",
 		"vite": "5.0"
 	},
