--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"astro-analytics": "^2.7.0",
 		"astro-capo": "^0.0.1",
 		"astro-font": "^0.0.72",
+		"jquery-smooth-scroll": "^2.2.0",
 		"vite": "5.0"
 	},
 	"devDependencies": {
