--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@tinacms/cli": "^1.5.30",
 		"@types/jquery": "^3.5.32",
 		"@typescript-eslint/parser": "^6.16.0",
+		"@vite-pwa/astro": "^0.5.0",
 		"clsx": "2.0.0",
 		"eslint": "^8.56.0",
 		"eslint-plugin-astro": "^0.31.0",
