--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"astro-capo": "^0.0.1",
 		"astro-font": "^0.0.72",
 		"jquery-smooth-scroll": "^2.2.0",
-		"vite": "5.0"
+		"vite": "5.0",
+		"vite-plugin-pwa": "^0.21.1"
 	},
 	"devDependencies": {
 		"@astrojs/mdx": "2.0.3",
