--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
 		"tailwind-merge": "2.0.0",
 		"tailwindcss": "3.3.5",
 		"tinacms": "^1.5.21",
-		"typescript": "^5.2.2"
+		"typescript": "^5.2.2",
+		"workbox-window": "^7.3.0"
 	},
 	"lint-staged": {
 		"*.{astro,js,jsx,ts,tsx,md,mdx,json}": [
