--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
 		"astro-font": "^0.0.72",
 		"jquery-smooth-scroll": "^2.2.0",
 		"vite": "5.0",
-		"vite-plugin-pwa": "^0.21.1"
+		"vite-plugin-pwa": "^0.21.1",
+		"workbox-build": "^7.3.0",
+		"workbox-core": "^7.3.0",
+		"workbox-routing": "^7.3.0",
+		"workbox-strategies": "^7.3.0"
 	},
 	"devDependencies": {
 		"@astrojs/mdx": "2.0.3",
