--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,19 +11,22 @@
 			"@/data/*": ["src/data/*"],
 			"@/site-config": ["src/data/site.config.ts"],
 			"@/styles": ["src/styles/"]
-		}
+		},
+		"types": [
+			"astro/client",
+			"vite-plugin-pwa/vanillajs.d.ts",
+			"vite-plugin-pwa/info.d.ts",
+			"vite-plugin-pwa/client.d.ts"
+		]
 	},
-	"types": [
-		"astro/client",
-		"vite-plugin-pwa/client",
-		"vite-plugin-pwa/vanillajs",
-		"vite-plugin-pwa/info"
-	],
-	"exclude": ["node_modules", "**/node_modules/*", ".vscode", "dist"],
 	"include": [
 		"node_modules/vite-plugin-pwa/client.d.ts",
 		"src/**/*.ts",
 		"src/**/*.tsx",
-		"src/**/*.astro"
+		"src/**/*.astro",
+		"src/env.d.ts",
+		"vite-plugin-pwa/client",
+		"vite-plugin-pwa/vanillajs",
+		"vite-plugin-pwa/info"
 	]
 }
