--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"dependencies": {
 		"@astrojs/prism": "^3.2.0",
 		"@astrojs/rss": "4.0.1",
+		"@vite-pwa/assets-generator": "^0.2.6",
 		"astro": "4.2.2",
 		"astro-analytics": "^2.7.0",
 		"astro-capo": "^0.0.1",
@@ -81,6 +82,5 @@
 		"*.{astro,js,jsx,ts,tsx,md,mdx,json}": [
 			"prettier --write --plugin-search-dir=."
 		]
-	},
-	"packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
+	}
 }
