--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
 		"@astrojs/prism": "^3.2.0",
 		"@astrojs/rss": "4.0.1",
 		"@vite-pwa/assets-generator": "^0.2.6",
-		"astro": "4.2.2",
+		"astro": "5.1.3",
 		"astro-analytics": "^2.7.0",
 		"astro-capo": "^0.0.1",
 		"astro-font": "^0.0.72",
 		"jquery-smooth-scroll": "^2.2.0",
-		"vite": "5.0",
+		"vite": "6.0.6",
 		"vite-plugin-pwa": "^0.21.1",
 		"workbox-build": "^7.3.0",
 		"workbox-core": "^7.3.0",
@@ -49,14 +49,14 @@
 		"workbox-strategies": "^7.3.0"
 	},
 	"devDependencies": {
-		"@astrojs/mdx": "2.0.3",
+		"@astrojs/mdx": "4.0.3",
 		"@astrojs/sitemap": "3.0.4",
 		"@astrojs/tailwind": "5.1.0",
 		"@pagefind/default-ui": "^1.0.4",
 		"@tailwindcss/typography": "0.5.10",
 		"@tinacms/cli": "^1.5.30",
 		"@types/jquery": "^3.5.32",
-		"@typescript-eslint/parser": "^6.16.0",
+		"@typescript-eslint/parser": "8.19.0",
 		"@vite-pwa/astro": "^0.5.0",
 		"clsx": "2.0.0",
 		"eslint": "^8.56.0",
