--- a/package.json
+++ b/package.json
@@ -40,11 +40,7 @@
 		"astro-capo": "^0.0.1",
 		"astro-font": "^0.0.72",
 		"jquery-smooth-scroll": "^2.2.0",
-		"vite": "6.0.6",
-		"workbox-build": "^7.3.0",
-		"workbox-core": "^7.3.0",
-		"workbox-routing": "^7.3.0",
-		"workbox-strategies": "^7.3.0"
+		"vite": "6.0.6"
 	},
 	"devDependencies": {
 		"vite-plugin-pwa": "^0.21.1",
