--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
 		"astro-analytics": "^2.7.0",
 		"astro-capo": "^0.0.1",
 		"astro-font": "^0.0.72",
+		"head": "^1.0.0",
+		"headjs": "^1.0.3",
 		"jquery-smooth-scroll": "^2.2.0",
 		"vite": "6.0.6"
 	},
 	"devDependencies": {
-		"vite-plugin-pwa": "^0.21.1",
-		"@vite-pwa/assets-generator": "^0.2.6",
 		"@astrojs/mdx": "4.0.3",
 		"@astrojs/sitemap": "3.0.4",
 		"@astrojs/tailwind": "5.1.0",
@@ -57,6 +57,7 @@
 		"@tinacms/cli": "^1.5.30",
 		"@types/jquery": "^3.5.32",
 		"@typescript-eslint/parser": "8.19.0",
+		"@vite-pwa/assets-generator": "^0.2.6",
 		"@vite-pwa/astro": "^0.5.0",
 		"clsx": "2.0.0",
 		"eslint": "^8.56.0",
@@ -76,6 +77,7 @@
 		"tailwindcss": "3.3.5",
 		"tinacms": "^1.5.21",
 		"typescript": "^5.2.2",
+		"vite-plugin-pwa": "^0.21.1",
 		"workbox-window": "^7.3.0"
 	},
 	"lint-staged": {
