--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
 		"head": "^1.0.0",
 		"headjs": "^1.0.3",
 		"jquery-smooth-scroll": "^2.2.0",
+		"markdown-it": "^14.1.0",
+		"sanitize-html": "^2.14.0",
 		"vite": "6.0.6"
 	},
 	"devDependencies": {
@@ -56,6 +58,8 @@
 		"@tailwindcss/typography": "0.5.10",
 		"@tinacms/cli": "^1.5.30",
 		"@types/jquery": "^3.5.32",
+		"@types/markdown-it": "^14.1.2",
+		"@types/sanitize-html": "^2.13.0",
 		"@typescript-eslint/parser": "8.19.0",
 		"@vite-pwa/assets-generator": "^0.2.6",
 		"@vite-pwa/astro": "^0.5.0",
