--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"astro-analytics": "^2.7.0",
 		"astro-capo": "^0.0.1",
 		"astro-font": "^0.0.72",
+		"feed": "^4.2.2",
 		"head": "^1.0.0",
 		"headjs": "^1.0.3",
 		"jquery-smooth-scroll": "^2.2.0",
