--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"astro": "5.1.3",
 		"astro-analytics": "^2.7.0",
 		"astro-capo": "^0.0.1",
+		"astro-embed": "^0.9.0",
 		"astro-font": "^0.0.72",
 		"feed": "^4.2.2",
 		"head": "^1.0.0",
