--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
 		"astro-capo": "^0.0.1",
 		"astro-embed": "^0.9.0",
 		"astro-font": "^0.0.72",
+		"astro-imagetools": "^0.9.0",
+		"components\n": "link:astro-imagetools/components\n",
 		"feed": "^4.2.2",
 		"markdown-it": "^14.1.0",
 		"sanitize-html": "^2.14.0",
