--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"pnpm": ">=9"
 	},
 	"dependencies": {
+		"@astrojs/partytown": "^2.1.3",
 		"@astrojs/prism": "^3.2.0",
 		"@astrojs/rss": "4.0.1",
 		"astro": "5.1.3",
