--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"feed": "^4.2.2",
 		"html2canvas": "^1.4.1",
 		"markdown-it": "^14.1.0",
+		"modern-screenshot": "^4.5.5",
 		"sanitize-html": "^2.14.0",
 		"vite": "6.0.6"
 	},
