--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
 			"@/utils": ["src/utils/index.ts"],
 			"@/data/*": ["src/data/*"],
 			"@/site-config": ["src/data/site.config.ts"],
-			"@/styles": ["src/styles/"]
+			"@/styles": ["src/styles/"],
+			"@/*": ["./src/*"]
 		},
 		"types": [
 			"astro/client",
