--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"astro-embed": "^0.9.0",
 		"astro-font": "^0.0.72",
 		"astro-imagetools": "^0.9.0",
+		"astro-seo": "^0.8.4",
 		"components\n": "link:astro-imagetools/components\n",
 		"feed": "^4.2.2",
 		"html2canvas": "^1.4.1",
