--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 			"@/data/*": ["src/data/*"],
 			"@/site-config": ["src/data/site.config.ts"],
 			"@/styles": ["src/styles/"],
+			"@/assets/*": ["src/assets/*"],
 			"@/*": ["./src/*"]
 		},
 		"types": [
