--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"build": "astro build",
 		"sync": "astro sync",
 		"preview": "astro preview",
-		"postbuild": "pagefind --site dist",
+		"postbuild": "pagefind --site dist && node ./processHTML.js",
 		"format:check": "prettier --plugin-search-dir=. --check .",
 		"format": "prettier --plugin-search-dir=. --write .",
 		"lint": "eslint .",
@@ -48,9 +48,13 @@
 		"astro-font": "^0.0.72",
 		"astro-imagetools": "^0.9.0",
 		"astro-seo": "^0.8.4",
+		"cheerio": "^1.0.0",
 		"components\n": "link:astro-imagetools/components\n",
 		"feed": "^4.2.2",
+		"globby": "^14.1.0",
+		"html-minifier": "^4.0.0",
 		"html2canvas": "^1.4.1",
+		"jsdom": "^26.0.0",
 		"markdown-it": "^14.1.0",
 		"modern-screenshot": "^4.5.5",
 		"sanitize-html": "^2.14.0",
