--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-	"editor.gotoLocation.multipleDefinitions": "goto"
+	"editor.gotoLocation.multipleDefinitions": "goto",
+	"files.associations": {
+		"*.astro": "astro"
+	}
 }
