--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
 	"editor.gotoLocation.multipleDefinitions": "goto",
 	"files.associations": {
 		"*.astro": "astro"
-	}
+	},
+	"git.ignoreLimitWarning": true
 }
