--- a/package.json
+++ b/package.json
@@ -1,105 +1,106 @@
 {
-	"name": "jswhisperer",
-	"type": "module",
-	"version": "1.1.0",
-	"description": "A template for creating a blog with Astro",
-	"author": "danielcgilibert",
-	"license": "GPL-3.0-only",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/danielcgilibert/blog-template"
-	},
-	"keywords": [
-		"astro",
-		"astrojs",
-		"astro-template",
-		"astro-blog",
-		"astro-b"
-	],
-	"bugs": {
-		"url": "https://github.com/danielcgilibert/blog-template/issues"
-	},
-	"scripts": {
-		"dev": "npx tinacms dev -c \"astro dev\"",
-		"start": "astro dev",
-		"build": "astro build",
-		"sync": "astro sync",
-		"preview": "astro preview",
-		"postbuild": "pagefind --site dist && node ./processHTML.js",
-		"format:check": "prettier --plugin-search-dir=. --check .",
-		"format": "prettier --plugin-search-dir=. --write .",
-		"lint": "eslint .",
-		"pre-commit": "lint-staged",
-		"prepare": "husky install"
-	},
-	"engines": {
-		"node": ">=20",
-		"pnpm": ">=9"
-	},
-	"dependencies": {
-		"@astrojs/partytown": "^2.1.4",
-		"@astrojs/prism": "^3.2.0",
-		"@astrojs/rss": "4.0.1",
-		"@tailwindcss/postcss": "^4.0.6",
-		"astro": "5.1.3",
-		"astro-analytics": "^2.7.0",
-		"astro-capo": "^0.0.1",
-		"astro-embed": "^0.9.0",
-		"astro-font": "^0.0.72",
-		"astro-imagetools": "^0.9.0",
-		"astro-seo": "^0.8.4",
-		"cheerio": "^1.0.0",
-		"components\n": "link:astro-imagetools/components\n",
-		"feed": "^4.2.2",
-		"globby": "^14.1.0",
-		"html-minifier": "^4.0.0",
-		"html2canvas": "^1.4.1",
-		"jsdom": "^26.0.0",
-		"markdown-it": "^14.1.0",
-		"modern-screenshot": "^4.5.5",
-		"sanitize-html": "^2.14.0",
-		"vite": "6.0.6"
-	},
-	"devDependencies": {
-		"@ampproject/toolbox-optimizer": "^2.10.1",
-		"@astrojs/mdx": "4.0.3",
-		"@astrojs/sitemap": "3.3.0",
-		"@astrojs/tailwind": "6.0.0",
-		"@pagefind/default-ui": "^1.0.4",
-		"@tailwindcss/typography": "0.5.10",
-		"@tinacms/cli": "^1.5.30",
-		"@types/jquery": "^3.5.32",
-		"@types/markdown-it": "^14.1.2",
-		"@types/sanitize-html": "^2.13.0",
-		"@typescript-eslint/parser": "8.29.1",
-		"@vite-pwa/assets-generator": "^0.2.6",
-		"@vite-pwa/astro": "^0.5.0",
-		"clsx": "2.1.1",
-		"eslint": "^8.56.0",
-		"eslint-plugin-astro": "^0.31.0",
-		"eslint-plugin-jsx-a11y": "^6.8.0",
-		"husky": "^8.0.3",
-		"lint-staged": "^15.5.1",
-		"mdast-util-to-string": "^4.0.0",
-		"motion": "^10.16.4",
-		"pagefind": "^1.0.3",
-		"prettier": "^3.0.3",
-		"prettier-config-standard": "^7.0.0",
-		"prettier-plugin-astro": "^0.12.0",
-		"reading-time": "^1.5.0",
-		"slugify": "^1.6.6",
-		"tailwind-merge": "2.0.0",
-		"tailwindcss": "3.3.5",
-		"tinacms": "^2.7.5",
-		"typescript": "^5.2.2",
-		"vite-plugin-amp": "^1.2.3",
-		"vite-plugin-pwa": "^0.21.1",
-		"workbox-window": "^7.3.0"
-	},
-	"lint-staged": {
-		"*.{astro,js,jsx,ts,tsx,md,mdx,json}": [
-			"prettier --write --plugin-search-dir=."
-		]
-	},
-	"packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321"
+  "name": "jswhisperer",
+  "type": "module",
+  "version": "1.1.0",
+  "description": "A template for creating a blog with Astro",
+  "author": "danielcgilibert",
+  "license": "GPL-3.0-only",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/danielcgilibert/blog-template"
+  },
+  "keywords": [
+    "astro",
+    "astrojs",
+    "astro-template",
+    "astro-blog",
+    "astro-b"
+  ],
+  "bugs": {
+    "url": "https://github.com/danielcgilibert/blog-template/issues"
+  },
+  "scripts": {
+    "dev": "npx tinacms dev -c \"astro dev\"",
+    "start": "astro dev",
+    "build": "astro build",
+    "sync": "astro sync",
+    "preview": "astro preview",
+    "postbuild": "pagefind --site dist && node ./processHTML.js",
+    "format:check": "prettier --plugin-search-dir=. --check .",
+    "format": "prettier --plugin-search-dir=. --write .",
+    "lint": "eslint .",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install"
+  },
+  "engines": {
+    "node": ">=20",
+    "pnpm": ">=9"
+  },
+  "dependencies": {
+    "@astrojs/partytown": "^2.1.4",
+    "@astrojs/prism": "^3.2.0",
+    "@astrojs/rss": "4.0.1",
+    "@tailwindcss/postcss": "^4.0.6",
+    "astro": "5.1.3",
+    "astro-analytics": "^2.7.0",
+    "astro-capo": "^0.0.1",
+    "astro-compressor": "^1.0.0",
+    "astro-embed": "^0.9.0",
+    "astro-font": "^0.0.72",
+    "astro-imagetools": "^0.9.0",
+    "astro-seo": "^0.8.4",
+    "cheerio": "^1.0.0",
+    "components\n": "link:astro-imagetools/components\n",
+    "feed": "^4.2.2",
+    "globby": "^14.1.0",
+    "html-minifier": "^4.0.0",
+    "html2canvas": "^1.4.1",
+    "jsdom": "^26.0.0",
+    "markdown-it": "^14.1.0",
+    "modern-screenshot": "^4.5.5",
+    "sanitize-html": "^2.14.0",
+    "vite": "6.0.6"
+  },
+  "devDependencies": {
+    "@ampproject/toolbox-optimizer": "^2.10.1",
+    "@astrojs/mdx": "4.0.3",
+    "@astrojs/sitemap": "3.3.0",
+    "@astrojs/tailwind": "6.0.0",
+    "@pagefind/default-ui": "^1.0.4",
+    "@tailwindcss/typography": "0.5.10",
+    "@tinacms/cli": "^1.5.30",
+    "@types/jquery": "^3.5.32",
+    "@types/markdown-it": "^14.1.2",
+    "@types/sanitize-html": "^2.13.0",
+    "@typescript-eslint/parser": "8.29.1",
+    "@vite-pwa/assets-generator": "^0.2.6",
+    "@vite-pwa/astro": "^0.5.0",
+    "clsx": "2.1.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-astro": "^0.31.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.5.1",
+    "mdast-util-to-string": "^4.0.0",
+    "motion": "^10.16.4",
+    "pagefind": "^1.0.3",
+    "prettier": "^3.0.3",
+    "prettier-config-standard": "^7.0.0",
+    "prettier-plugin-astro": "^0.12.0",
+    "reading-time": "^1.5.0",
+    "slugify": "^1.6.6",
+    "tailwind-merge": "2.0.0",
+    "tailwindcss": "3.3.5",
+    "tinacms": "^2.7.5",
+    "typescript": "^5.2.2",
+    "vite-plugin-amp": "^1.2.3",
+    "vite-plugin-pwa": "^0.21.1",
+    "workbox-window": "^7.3.0"
+  },
+  "lint-staged": {
+    "*.{astro,js,jsx,ts,tsx,md,mdx,json}": [
+      "prettier --write --plugin-search-dir=."
+    ]
+  },
+  "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321"
 }
