--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/prism": "^3.2.0",
     "@astrojs/rss": "4.0.1",
+    "@playform/compress": "^0.1.9",
     "@tailwindcss/postcss": "^4.0.6",
     "astro": "5.1.3",
     "astro-analytics": "^2.7.0",
