--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "astro-embed": "^0.9.0",
     "astro-font": "^0.0.72",
     "astro-imagetools": "^0.9.0",
+    "astro-purgecss": "^5.2.2",
     "astro-seo": "^0.8.4",
     "cheerio": "^1.0.0",
     "components\n": "link:astro-imagetools/components\n",
@@ -59,6 +60,7 @@
     "jsdom": "^26.0.0",
     "markdown-it": "^14.1.0",
     "modern-screenshot": "^4.5.5",
+    "purgecss": "^7.0.2",
     "sanitize-html": "^2.14.0",
     "vite": "6.0.6"
   },
