--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "@astrojs/prism": "^3.2.0",
     "@astrojs/rss": "4.0.1",
     "@playform/compress": "^0.1.9",
+    "@playform/inline": "^0.1.2",
     "@tailwindcss/postcss": "^4.0.6",
     "astro": "5.1.3",
     "astro-analytics": "^2.7.0",
     "astro-capo": "^0.0.1",
     "astro-compressor": "^1.0.0",
+    "astro-critters": "^2.2.1",
     "astro-embed": "^0.9.0",
     "astro-font": "^0.0.72",
     "astro-imagetools": "^0.9.0",
