--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "format": "prettier --plugin-search-dir=. --write .",
     "lint": "eslint .",
     "pre-commit": "lint-staged",
-    "generate-pwa-assets": "pwa-assets-generator --preset minimal public/favicon.svg",
+    "generate-pwa-assets": "pwa-assets-generator public/favicon.svg",
     "prepare": "husky install"
   },
   "engines": {
@@ -54,6 +54,7 @@
     "astro-imagetools": "^0.9.0",
     "astro-purgecss": "^5.2.2",
     "astro-seo": "^0.8.4",
+    "astro-selfie": "^1.0.2",
     "cheerio": "^1.0.0",
     "components\n": "link:astro-imagetools/components\n",
     "feed": "^4.2.2",
@@ -63,6 +64,7 @@
     "jsdom": "^26.0.0",
     "markdown-it": "^14.1.0",
     "modern-screenshot": "^4.5.5",
+    "puppeteer": "^24.8.0",
     "purgecss": "^7.0.2",
     "sanitize-html": "^2.14.0",
     "vite": "6.0.6"
@@ -81,6 +83,7 @@
     "@typescript-eslint/parser": "8.29.1",
     "@vite-pwa/assets-generator": "^0.2.6",
     "@vite-pwa/astro": "^0.5.0",
+    "astro-selfie": "^1.0.2",
     "clsx": "2.1.1",
     "eslint": "^8.56.0",
     "eslint-plugin-astro": "^0.31.0",
