--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "format": "prettier --plugin-search-dir=. --write .",
     "lint": "eslint .",
     "pre-commit": "lint-staged",
-    "generate-pwa-assets": "pwa-assets-generator public/favicon.svg",
+    "generate-pwa-assets": "pwa-assets-generator --preset all public/favicon.svg",
     "prepare": "husky install"
   },
   "engines": {
@@ -52,12 +52,13 @@
     "astro-embed": "^0.9.0",
     "astro-font": "^0.0.72",
     "astro-purgecss": "^5.2.2",
-    "astro-seo": "^0.8.4",
     "astro-selfie": "^1.0.2",
+    "astro-seo": "^0.8.4",
     "cheerio": "^1.0.0",
     "feed": "^4.2.2",
     "globby": "^14.1.0",
     "html-minifier": "^4.0.0",
+    "html2canvas": "^1.4.1",
     "jsdom": "^26.0.0",
     "markdown-it": "^14.1.0",
     "purgecss": "^7.0.2",
