--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
   "files.associations": {
     "*.astro": "astro"
   },
-  "git.ignoreLimitWarning": true
+  "git.ignoreLimitWarning": true,
+  "editor.fontSize": 14,
+  "editor.fontLigatures": false
 }
