--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/prism": "^3.2.0",
     "@astrojs/rss": "4.0.1",
+    "@bokuweb/zstd-wasm": "^0.0.27",
+    "@oneidentity/zstd-js": "^1.0.3",
     "@playform/compress": "^0.1.9",
     "@playform/inline": "^0.1.2",
     "@tailwindcss/postcss": "^4.0.6",
+    "@ungap/compression-stream": "^0.1.0",
     "astro": "5.1.3",
     "astro-analytics": "^2.7.0",
     "astro-capo": "^0.0.1",
@@ -53,12 +56,15 @@
     "astro-font": "^0.0.72",
     "astro-purgecss": "^5.2.2",
     "astro-seo": "^0.8.4",
+    "bonjour-service": "^1.3.0",
+    "byte-size": "^9.0.1",
     "cheerio": "^1.0.0",
     "feed": "^4.2.2",
     "globby": "^14.1.0",
     "html-minifier": "^4.0.0",
     "html2canvas": "^1.4.1",
     "jsdom": "^26.0.0",
+    "lz-string": "^1.5.0",
     "markdown-it": "^14.1.0",
     "purgecss": "^7.0.2",
     "sanitize-html": "^2.14.0",
